# custom-effector-test

./: Cargo.toml  README.md  fluence.yaml  provider.yaml
.fluence/: docker-compose.yaml  provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
src/aqua/: main.aqua
src/compiled-aqua/: main.ts
src/services/: cioKubo  cioPinata  cioVault
src/services/cioKubo/: service.yaml
src/services/cioKubo/modules/cioKubo/: Cargo.toml  module.yaml
src/services/cioKubo/modules/cioKubo/src/: main.rs
src/services/cioKubo/modules/ipfs_effector/: module.yaml
src/services/cioPinata/: service.yaml
src/services/cioPinata/cioPinata/: Cargo.toml  module.yaml
src/services/cioPinata/cioPinata/src/: main.rs  multipart.rs  pinata.rs
src/services/cioPinata/cio_curl_effector/: cio_curl_effector.wasm  module.yaml
